<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>

    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="red">RED </string>

    <string name="shareMessage">Toque aqui para compartilhar o arquivo com seus contatos.</string>
</resources>